[package]
name = "pwm_module"
version = "0.2.0"
edition = "2024"

[lib]
path = "src/lib.rs"
name = "pwm_module"

[dependencies]
embedded-hal = "1.0.0"

[dev-dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.5"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
defmt = "0.3"
defmt-rtt = "0.4"

# Embassy
embassy-executor = { version = "0.6.0", features = ["arch-cortex-m", "executor-thread", "defmt"] }
embassy-time = { version = "0.3.2", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-rp = { version = "0.2.0", features = ["defmt", "time-driver", "critical-section-impl", "rp235xa", "binary-info"] }

# Required for the example to link correctly
[profile.dev]
debug = true
lto = true
opt-level = "z"

